[package]
name = "wallcolle-make"
version = "0.1.0"
authors = ["liushuyu <liushuyu011@gmail.com>"]
edition = "2018"
license = "GPL-2.0-or-later"

[dependencies]
argh = "0.1"
anyhow = "1.0"
rayon = "1.5"
sailfish = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.8"
slug = "0.1"
oxipng = { version = "4.0", default-features = false }
which = "4.1"

[profile.release]
lto = true
